@@ -58,9 +58,9 @@ public:
   void startParsing(int lno);
   void endParsing(int lno);
   void clearLine(int lno, String *line);
-  void addRegion(int lno, String *line, int sx, int ex, const Region *region);
-  void enterScheme(int lno, String *line, int sx, int ex, const Region *region, const Scheme *scheme);
-  void leaveScheme(int lno, String *line, int sx, int ex, const Region *region, const Scheme *scheme);
+  void addRegion(int lno, InternalString *line, int sx, int ex, const Region *region);
+  void enterScheme(int lno, InternalString *line, int sx, int ex, const Region *region, const Scheme *scheme);
+  void leaveScheme(int lno, InternalString *line, int sx, int ex, const Region *region, const Scheme *scheme);
   void modifyEvent(int topLine);
 
 protected:
